force-app/main/default/objects/ContentVersion/fields/cgcloud__Area_Tag__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Area_Tag__c</fullName>
    <label>Area</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MainAisle</fullName>
            </value>
            <value>
                <fullName>CashPoint</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>