force-app/main/default/objects/ContentVersion/fields/cgcloud__Geolocation__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Geolocation__c</fullName>
    <inlineHelpText>Latitude (-90; 90)
      Longitude (-180; 180)</inlineHelpText>
    <label>Geolocation</label>
    <scale>15</scale>
    <type>Location</type>
</CustomField>