force-app/main/default/objects/ContentVersion/fields/cgcloud__Usage__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Usage__c</fullName>
    <label>Usage</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Icon</fullName>
            </value>
            <value>
                <fullName>InitialBadge</fullName>
            </value>
            <value>
                <fullName>FulfilledBadge</fullName>
            </value>
            <value>
                <fullName>Sales</fullName>
            </value>
            <value>
                <fullName>Service</fullName>
            </value>
            <value>
                <fullName>Marketing</fullName>
            </value>
            <value>
                <fullName>SelectionBar</fullName>
            </value>
            <value>
                <fullName>Banner</fullName>
            </value>
            <value>
                <fullName>Pricing</fullName>
            </value>
            <value>
                <fullName>HurdleRewardLog</fullName>
            </value>
            <value>
                <fullName>Printout</fullName>
                <label>Printed Document</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>